# dev

./: .baw  .dockerignore  .rcfile  CHANGELOG  Dockerfile  Makefile  README  pyproject.toml  requirements.dev  setup.py
.github/workflows/: pylint.yml  pypi.yml  release.yml  test.yml
cobdh/: __init__.py  cob_xml.py  crawl.py  str.py  utils.py
cobdh/cli/: bibl.py  enrich.py  format.py  persons.py  split.py  validate.py
cobdh/xml/: __init__.py  cli.py  enrich.py  fix.py  formatter.py  inter.py  parser.py  persons.py  split.py
cobdh/xmlx/: __init__.py  enrich.py  fix.py  inter.py  parser.py  persons.py
cobdh/xmlx/persons/: __init__.py  data.py  magic.py  parser.py
cobdh/xmlx/validate/: bibl.py  persons.py
docker/builder/: DOCKERFILE  Dockerfile  Makefile  buildit  make
short/: alias.sh
tests/: __init__.py  conftest.py  test_xml_format.py  test_xml_split.py
tests/xml/: test_enrich.py  test_fix.py  test_format.py  test_persons.py  test_split.py
tests/xml/data/: idem.xml
tests/xml/data/bibl/: 1.xml  136.xml  2.xml  27.xml  5.xml
tests/xml/data/persons/: 1.xml  5.xml
tests/xml/persons/: __init__.py  test_parser.py  test_persons.py
tests/xml/validate/: test_persons.py
